# deepRockHack1929

./: .gitignore  CMakeLists.txt  DeepRockFuncHook.cpp  DeepRockFuncHook.h  HotKeys.h  README.md  appMain.cpp  config.h  config.h.in  dllmain.cpp  engine.cpp  engine.h  framework.h  hook.cpp  inj.hpp  pattern_scan.hpp
dx11_imgui_lib/include/: dx11Imgui.h
dx11_imgui_lib/lib/: dx11_imgui_lib.lib
fromGithub/: fromGithub.h
